# pymyob

./: .gitignore  .travis.yml  LICENSE  MANIFEST  PUBLISHING.md  Pipfile  README.md  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/workflows/: lint.yml  linter.yml  test.yml
myob/: __init__.py  api.py  constants.py  credentials.py  endpoints.py  exceptions.py  managers.py  utils.py
src/myob/: __init__.py  api.py  constants.py  credentials.py  endpoints.py  exceptions.py  managers.py  types.py  utils.py
tests/: README.md  endpoints.py  managers.py  test_endpoints.py  test_managers.py
