[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymyob"
version = "1.4.0"
dependencies = [
  "requests>=2.32.0",
  "requests-oauthlib>=2.0.0",
]
requires-python = ">= 3.10"
authors = [
  {name = "Jarek Głowacki", email = "jarekwg@gmail.com"}
]
maintainers = [
  {name = "Jarek Głowacki", email = "jarekwg@gmail.com"}
]
description = "A Python SDK for the MYOB Business (formerly AccountRight Live, and New Essentials) API."
readme = "README.md"
keywords = ["myob"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Accounting",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.urls]
source = "https://github.com/uptick/pymyob"
releasenotes = "https://github.com/uptick/pymyob/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/myob"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  "build",
  "dist",
  "tests"
]

[tool.ruff.lint]
select = [
  "F",      # Pyflakes
  "E",      # pycodestyle
  "W",      # pycodestyle
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "ANN",    # flake8-annotations
  "B",      # flake8-bugbear
  "S",      # flake8-bandit
  "T10",    # debugger
  "TID",    # flake8-tidy-imports
]
ignore = [
  "E501",
  "ANN401",
]

[tool.ruff.lint.isort]
extra-standard-library = [
    "requests",
]
