[metadata]
name = pymyob
version = attr: myob.__version__
author = Jarek Głowacki
author_email = jarekwg@gmail.com
license = BSD
description = A Python API around MYOB's AccountRight API.
keywords = myob
url = https://github.com/uptick/pymyob
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business

[options]
packages = myob
install_requires =
    requests>=2.10.0
    requests-oauthlib>=0.6.0

[flake8]
ignore = E501
max-line-length = 100

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_standard_library = arrow,factory,mock,requests,six
known_first_party = myob
multi_line_output = 3
line_length = 100
indent = 4
